[gd_scene load_steps=10 format=3 uid="uid://b8hijpucsu33e"]

[ext_resource type="Script" path="res://script/UI/ability.gd" id="1_wv7f8"]
[ext_resource type="Texture2D" uid="uid://v43cpo6a2hnm" path="res://asset/image/asset.png" id="2_24lmr"]
[ext_resource type="Theme" uid="uid://tkhof3a4pa3x" path="res://resource/transparent_button.tres" id="3_gs2ww"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rvv0q"]
atlas = ExtResource("2_24lmr")
region = Rect2(300, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_snmvu"]
atlas = ExtResource("2_24lmr")
region = Rect2(0, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihwhk"]
atlas = ExtResource("2_24lmr")
region = Rect2(300, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ey0p"]
atlas = ExtResource("2_24lmr")
region = Rect2(0, 700, 100, 100)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eatfq"]
texture = SubResource("AtlasTexture_7ey0p")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="Theme" id="Theme_mcdfk"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_eatfq")

[node name="Ability" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_wv7f8")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
pivot_offset = Vector2(50, 50)
max_value = 10.0
value = 10.0
fill_mode = 5
texture_under = SubResource("AtlasTexture_rvv0q")
texture_over = SubResource("AtlasTexture_snmvu")
texture_progress = SubResource("AtlasTexture_ihwhk")
tint_under = Color(0.325441, 0.325441, 0.325441, 1)
tint_progress = Color(1, 0.638906, 0.261359, 1)
radial_fill_degrees = 0.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_24lmr")
hframes = 9
region_enabled = true
region_rect = Rect2(0, 900, 900, 100)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
pivot_offset = Vector2(50, 50)
theme = ExtResource("3_gs2ww")

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
z_index = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 37.0
offset_top = 35.0
offset_right = 213.0
offset_bottom = 211.0
theme = SubResource("Theme_mcdfk")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "熟练：增加攻速与伤害"
autowrap_mode = 3

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
